<resources>
    <string name="app_name">CalendarView</string>

   <!-- for preview only-->
    <string name="current_date_month">June</string>
    <string name="current_date_year">2016</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
</resources>