<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorViewBackground">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/navigation_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@color/colorNavigationBackgroundYear">

            <ImageView
                android:id="@+id/previous_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:padding="5dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/display_current_year"
                app:layout_constraintTop_toTopOf="@id/display_current_year"
                app:layout_constraintBottom_toBottomOf="@id/display_current_year"
                tools:src="@drawable/left_arrow"/>
            <TextView
                android:id="@+id/display_current_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorLabelYear"
                tools:text="@string/current_date_year"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/previous_year"
                app:layout_constraintEnd_toStartOf="@id/next_year"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <ImageView
                android:id="@+id/next_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:padding="5dp"
                android:contentDescription="@string/app_name"
                tools:src="@drawable/right_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/display_current_year"
                app:layout_constraintTop_toTopOf="@id/display_current_year"
                app:layout_constraintBottom_toBottomOf="@id/display_current_year"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/navigation_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@color/colorNavigationBackgroundMonth">

            <ImageView
                android:id="@+id/previous_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:padding="5dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/display_current_month"
                app:layout_constraintTop_toTopOf="@id/display_current_month"
                app:layout_constraintBottom_toBottomOf="@id/display_current_month"
                tools:src="@drawable/left_arrow"/>
            <TextView
                android:id="@+id/display_current_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorLabelMonth"
                tools:text="@string/current_date_month"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/previous_month"
                app:layout_constraintEnd_toStartOf="@id/next_month"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <ImageView
                android:id="@+id/next_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:padding="5dp"
                android:contentDescription="@string/app_name"
                tools:src="@drawable/right_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/display_current_month"
                app:layout_constraintTop_toTopOf="@id/display_current_month"
                app:layout_constraintBottom_toBottomOf="@id/display_current_month"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/days_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackgroundDays"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">
            <TextView
                android:id="@+id/sun"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorLabelDays"
                tools:text="@string/sun"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/mon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"/>
            <TextView
                android:id="@+id/mon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorLabelDays"
                tools:text="@string/mon"
                app:layout_constraintStart_toEndOf="@id/sun"
                app:layout_constraintEnd_toStartOf="@id/tue"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:id="@+id/tue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorLabelDays"
                tools:text="@string/tue"
                app:layout_constraintStart_toEndOf="@id/mon"
                app:layout_constraintEnd_toStartOf="@id/wed"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:id="@+id/wed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorLabelDays"
                tools:text="@string/wed"
                app:layout_constraintStart_toEndOf="@id/tue"
                app:layout_constraintEnd_toStartOf="@id/thu"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:id="@+id/thu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorLabelDays"
                tools:text="@string/thu"
                app:layout_constraintStart_toEndOf="@id/wed"
                app:layout_constraintEnd_toStartOf="@id/fri"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:id="@+id/fri"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorLabelDays"
                tools:text="@string/fri"
                app:layout_constraintStart_toEndOf="@id/thu"
                app:layout_constraintEnd_toStartOf="@id/sat"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:id="@+id/sat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorLabelDays"
                tools:text="@string/sat"
                app:layout_constraintStart_toEndOf="@id/fri"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendar_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</layout>

